
2017-12-05  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* cobcrun.c [_WIN32]: added missing headers

2017-11-21  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* cobcrun.c [_WIN32]: allowing tests to result in the expected line
	  ending for messages returned from cobcrun.c directly

2017-11-15  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* cobcrun.c: use (cob_init_nomain) instead of (cob_init) as it includes
	  no functions intended for COBOL use (speedup + workaround ltdl leak)

2017-11-02  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* cobcrun.c: check missing evaluation of command line option;
	  fixed printing newline to stderr instead of stdout;
	  code-coverage specific changes

2017-10-22  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* Makefile.am: moved include of top_srcdir to AM_CPPFLAGS to prevent
	  user-specified CPPFLAGS to override own includes, see bug #452

2017-08-08  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* cobcrun.c: use only memory and environment functions provided by libcob
	* cobcrun.c (cobcrun_setenv): removed

2017-06-16  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* Makefile.am: added CODE_COVERAGE parts as provided by AX_CODE_COVERAGE
	* cobcrun.c: don't print runtime env when program name > max length,
	  surrounded exception ABORTs that cannot be tested by LCOV_EXCP markers

2017-01-10  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* cobcrun.c: Copyright year 2017

2016-08-20  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* cobcrun.c: fixed missing cob_stop_run() for --print-runtime-conf,
	  apply possible configuration files given on the command line before
	  and allow to use it together with starting a program

2016-08-10  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* cobcrun.c: added option --brief (-q) to remove the path to cobcrun
	  in argv[0]
