@@ -2,6 +2,7 @@
 2017-12-05  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>
 
 	* cobcrun.c [_WIN32]: added missing headers
+	* cobcrun.c (cobcrun_split_path_file): no trailing slash for pathname
 
 2017-11-21  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>
 
